# yew-stylished-webapp

./: Cargo.toml  README.md  front-7e0fd8d97509335b.js  front-7e0fd8d97509335b_bg.wasm  front-cfd89528d2a72dd6.js  front-cfd89528d2a72dd6_bg.wasm  index.html  style-39291122cd6146bf.css
.github/workflows/: rust.yml
src/: main.rs
