[package]
name = "front"
version = "0.1.0"
edition = "2021"


[dependencies]
material-yew = { git="https://github.com/hamza1311/material-yew/", features = ["full"] }
# this is the development version of Yew
#yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew = "0.19.0"
wasm-bindgen = "0.2"
